# RubiksCubeSolver

./: CMakeLists.txt  RubiksCube1dArrayRep.cpp  RubiksCube33.cpp  RubiksCube33.h  RubiksCube3dArrayRep.cpp  RubiksCubeBitboard.cpp  main.cpp
Model/: RubiksCube33.cpp
PatternDB/: NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFSsolver.h  DFSSolver.h  IDAStarSolver.h  IDDFSsolver.h
